@@ -1,3 +1,8 @@
+2004/06/21 22:15 (-0400) muppetman
+
+	* Glib.xs: fine-tune gperl_format_variable_for_output(); don't
+	truncate references, and disambiguate undef.
+
 2004/06/08 21:55 (-0400) muppetman
 
 	* AUTHORS, GLog.xs, GObject.xs, GParamSpec.xs, GType.xs, Glib.xs:
